syntax = "proto3";

package provisioner;

import "google/protobuf/any.proto";

// enum Provider {
//   AWS = 0;
//   AZURE = 1;
//   GCP = 2;
// }

service ProvisionerService {
  rpc GetProvisionerStatus (StatusRequest) returns (StatusResponse);
  rpc ExecuteTask (TaskCreateRequest) returns (TaskCreateResponse);
}

message StatusRequest {}

message StatusResponse {
  string data = 1;
}

message BasicConfig {
  string url = 1;
  string data = 2;
}

message EnvConfig {
  oneof config_type {
    BasicConfig basic_config = 1;
  } 
}

message TaskCreateRequest {
  string id = 1;
  string name = 2;
  google.protobuf.Any data = 3;
}

message TaskCreateResponse {
  string status = 1;
} 